welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:35: error: not found: value faire
  faire Carre()
  ^